<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    tools:context=".activities.HomeActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/img_emoji_merge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_merge"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/img_btn_merge"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/svn_dumpling"
            android:paddingBottom="7dp"
            android:text="@string/merge"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right_merge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/btn_merge">

        <TextView
            android:id="@+id/tv_collection"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/img_btn_blue"
            android:textColor="@color/white"
            android:fontFamily="@font/svn_dumpling"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:text="@string/collection" />
        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dp"
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/img_btn_blue"
            android:textColor="@color/white"
            android:fontFamily="@font/svn_dumpling"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/setting" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>