<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_collection"
    android:fitsSystemWindows="true"
    tools:context=".activities.SettingActivity">
    <RelativeLayout
        android:id="@+id/rl_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="44dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_merge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/svn_dumpling"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="32sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ln_sound"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_nav_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/rl_nav_bar"
        tools:layout_editor_absoluteX="26dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_sound" />

        <TextView
            android:id="@+id/tv_sound"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="5dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/svn_dumpling"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/sound"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/switch_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:src="@drawable/ic_on" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnLanguages"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_nav_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/ln_sound">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/ic_menu_languages" />

        <TextView
            android:id="@+id/tv_languages"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="5dp"
            android:ellipsize="marquee"
            android:fontFamily="@font/svn_dumpling"
            android:includeFontPadding="false"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/language"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:src="@drawable/ic_arrow_right_lang" />
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>