<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_collection"
    android:fitsSystemWindows="true"
    tools:context=".activities.ResultActivity">

    <RelativeLayout
        android:id="@+id/rl_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="44dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back_merge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingHorizontal="3dp"
            android:shadowRadius="10"
            android:shadowDx="4"
            android:shadowDy="5"
            android:textColor="#0061BB"
            android:shadowColor="#FFFFFF"
            android:fontFamily="@font/svn_dumpling"
            android:text="@string/collection"
            android:textSize="32sp" />
    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="220dp"
        android:layout_centerHorizontal="true"
        android:layout_height="220dp"
        android:layout_below="@id/rl_nav_bar"
        android:background="@drawable/img_icon_result_collection"
        >

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:indicatorColor="#F7C02B"
            app:indicatorSize="60dp"
            app:trackCornerRadius="10dp"
            app:trackThickness="5dp" />

        <ImageView
            android:id="@+id/mixedEmoji"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_centerInParent="true"
            android:src="@drawable/shocked" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ln_companion"
        android:layout_width="match_parent"
        android:layout_below="@id/rl_main"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_companion_1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:background="@drawable/img_background_emoji"
            android:padding="30dp"
            android:src="@drawable/shocked" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/ic_plus_merge"
            android:gravity="center"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/iv_companion_2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/img_background_emoji"
            android:padding="30dp"
            android:src="@drawable/shocked" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_nav"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/ln_companion"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/saveEmoji"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_share"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/svn_dumpling"
                android:includeFontPadding="false"
                android:gravity="center"
                android:text="@string/save_emoji"
                android:layout_marginBottom="2dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"

            />

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_share"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/svn_dumpling"
                android:gravity="center"
                android:text="@string/share"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>